# python-pso

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  trajectories3d
helper/: background_function.py  constants.py  eval_funcs.py  util.py
pso/: README.md  __init__.py  background_function.py  common_pso.py  constants.py  eval_funcs.py  hpso.py  main.py  particle.py  pso.ipynb  pso_np.py  tree.py  util.py
test/: test_dummy.py
vis/: ErrorVis.py  PSOVisualization.py  ScatterVisualizer.py  background_function.py  visualization.py
